Revision history for Shipwright

0.0.1  Tue Nov 20 16:28:55 2007
       Initial release.
0.0.2  Thu Feb  7 09:08:55 CST 2008
       no config any more
1.0    Fri Feb 15 03:38:17 CST 2008
       the first public release

1.01 Fri Feb 15 14:30:34 EST 2008

* Fixed search.cpan.org indexing of documentation. 
  Added more doc
  Fixed a few cpantesters-reported issues

1.10 Tue Aug 12 19:42:52 CST 2008

* added flags support
* added build.pl support
* added refs support
* more tests
* more docs
* a lot of bug fixes

1.12 Thu Aug 14 00:30:16 CST 2008
* clean some test failures

1.13 Wed Aug 20 23:11:31 CST 2008
* refactor a bit
* updated tutorial
* not wrap libexec any more

1.14 Tue Aug 26 16:23:56 CST 2008
* limit versions: perl 5.8.8+, SVK 2+, SVN 1.4+
* CFLAGS and LDFLAGS are added when build
* use Archive::Extract instead of tar cmd to extract compressed files
* some bug fixes
