@@ -239,7 +239,6 @@ sub _install {
                 $cmd  = $_;
             }
 
-            next if $type eq 'clean';        # don't need to clean when install
             if ( $self->skip_test && $type eq 'test' ) {
                 $self->log->info("skip build $type part in $dir");
                 next;
@@ -254,17 +253,20 @@ sub _install {
                         $self->log->error(
 "although tests failed, will install anyway since we have force arg\n"
                         );
-                        next;
                     }
                     ## no critic
                     elsif ( eval "$ktf->{$dir}" ) {
                         $self->log->error(
 "although tests failed, will install anyway since it's a known failure\n"
                         );
-                        next;
                     }
+                    next;
                 }
-                die "install failed";
+                elsif ( $type ne 'clean' ) {
+
+                    # clean is trivial, we'll just ignore if 'clean' fails
+                    confess "build $dir $type part with failure.";
+                }
             }
         }
     }
@@ -300,7 +302,7 @@ sub _wrapper {
 
         my $type;
         if ( -T $file ) {
-            open my $fh, '<', $file or die "can't open $file: $!";
+            open my $fh, '<', $file or confess "can't open $file: $!";
             my $shebang = <$fh>;
             my $base    = quotemeta $self->install_base;
             my $perl    = quotemeta $self->perl;
@@ -319,7 +321,7 @@ sub _wrapper {
         }
 
         move( $file => catfile( $self->install_base, "$dir-wrapped" ) )
-          or die $!;
+          or confess $!;
 
     # if we have this $type(e.g. perl) installed and have that specific wrapper,
     # then link to it, else link to the normal one
@@ -328,12 +330,12 @@ sub _wrapper {
             && -e catfile( '..', 'etc', "shipwright-$type-wrapper" ) )
         {
             symlink catfile( '..', 'etc', "shipwright-$type-wrapper" ) => $file
-              or die $!;
+              or confess $!;
         }
         else {
 
             symlink catfile( '..', 'etc', 'shipwright-script-wrapper' ) => $file
-              or die $!;
+              or confess $!;
         }
     };
 
@@ -389,7 +391,7 @@ sub test {
         $self->log->info("run tests $type:");
         if ( system($cmd) ) {
             $self->log->error("tests failed");
-            die;
+            confess;
         }
     }
 }
